# claude-hermes

./: .env.example  .env.prod.example  Makefile  coverage.xml  docker-compose.avorelio.yml  docker-compose.e2e.hermes.local.yml  docker-compose.e2e.hermes.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/postgres/init/: 01-roles.sh
docs/: 01-architecture.md  02-tech-stack.md  03-data-model.md  05-security.md  06-testing-strategy.md  07-deployment.md  08-api-documentation.md  09-e2e-testing.md  100-known-tech-debt.md  99-open-questions.md  API-REFERENCE.md  README.md  figma-gap-analysis.md
docs/adr/: ADR-002-access-policy-state-machine.md  ADR-004-blocked-http-200.md  ADR-006-credit-billing-and-subscription-grant.md  ADR-017-shared-server-traefik-deploy.md  ADR-018-embedded-auth-issuer.md  ADR-019-tools-catalog-endpoint.md  ADR-023-sync-ids-in-chat-response.md  ADR-026-global-server-side-tools-and-time-now.md  ADR-027-calendar-read-contract-alignment.md  ADR-028-projectid-in-chat-list-and-server-tools-in-chat-response.md  ADR-029-adapty-subscription-webhook.md  ADR-030-toolcallid-in-server-tools.md  ADR-031-absolute-preview-url.md  ADR-033-llm-provider-abstraction.md  ADR-035-prompt-presets-endpoint.md  ADR-037-chatrunrequest-context-allowlist-injection.md  ADR-039-optional-message-with-attachments.md  ADR-040-edit-message-and-regenerate.md  ADR-041-openai-native-pdf-attachment.md  ADR-042-hide-context-block-from-user-facing-history.md  ADR-043-sign-in-with-apple.md  ADR-044-client-api-key-auth.md  ADR-045-hermes-as-agent-proxy.md  ADR-046-per-user-hermes-runtime.md  ADR-047-usage-based-billing-for-agent.md  ADR-048-admin-credits-and-subscription-grant.md  ADR-049-redaction-usage-token-counts-allowlist.md  ADR-050-redaction-idempotencykey-allowlist.md  ADR-051-agent-debt-reconciliation.md  ADR-052-durable-subscription-idempotency.md  ADR-053-audit-logs-db-append-only.md  ADR-054-trial-claim-reconcile.md  ADR-055-hermes-instance-llm-config-contract.md  ADR-056-provision-readiness-gate-and-volume-ownership.md  ADR-057-dedicated-server-self-hosted-traefik-deploy.md  INDEX.md
docs/modules/admin/: 00-overview.md  02-api-contracts.md  06-rbac.md  07-implementation-phases.md  09-testing.md  README.md
docs/modules/agent-proxy/: 00-overview.md  01-context.md  02-api-contracts.md  03-architecture.md  05-events.md  06-rbac.md  07-implementation-phases.md  09-testing.md  README.md
docs/modules/api-gateway/: 02-api-contracts.md  03-architecture.md
docs/modules/attachments/: 01-context.md  02-api-contracts.md
docs/modules/audit/: 02-api-contracts.md
migrations/: env.py
migrations/versions/: 20260602_0005_embedded_auth_issuer.py  20260619_0012_auth_identities.py  20260623_0013_hermes_instances.py  20260624_0014_wallets_debt.py  20260624_0015_subscription_grant_events.py  20260624_0016_audit_logs_append_only.py
src/app/: config.py  deps.py  errors.py  main.py
tests/: conftest.py
tests/e2e/: test_assistant_mode.py  test_time_now_external.py
tests/e2e_live/: conftest_live.py  run_admin_website_e2e.py  run_e2e.py
tests/integration/: test_admin_subscription_grant.py  test_adr022_project_gating.py  test_agent_billing_savepoint.py  test_agent_billing_streaming_commit.py  test_agent_debt_reconciliation_adr051.py  test_agent_proxy_api.py  test_api_documentation.py  test_audit_append_only_td001.py  test_auth_api.py  test_auth_apple_api.py  test_auth_migration_0005.py  test_auth_migration_0012.py  test_auth_refresh_cleanup_td013.py  test_auth_unconfigured.py  test_byok.py  test_byok_status_policy.py  test_chat_edit_regenerate_adr040.py  test_chat_list_project_id_adr028.py  test_chat_server_tools_adr028.py  test_chat_server_tools_toolcallid_adr030.py  test_chat_sync_ids_adr023.py  test_chats.py  test_client_api_key_auth_adr044.py  test_context_injection_adr037.py  test_gateway_endpoints.py  test_gateway_http_semantics.py  test_hermes_instances_registry.py  test_hide_context_block_adr042.py  test_migration_0013_hermes_instances.py  test_optional_message_adr039.py  test_preferences.py  test_presets_endpoint_adr035.py  test_profile.py  test_site_preview_url_adr031.py  test_streaming_size_guard_adr017.py  test_subscription.py  test_time_now_tool_loop_adr026.py  test_token_purchase.py  test_tools_endpoint.py  test_trial_claim_reconcile_adr054.py
tests/unit/: test_adr022_optional_project.py  test_agent_billing_units.py  test_agent_proxy_service.py  test_auth_apple_verifier.py  test_auth_issuer.py  test_calendar_read_contract_adr027.py  test_client_api_key_auth_adr044.py  test_context_block_adr037.py  test_hermes_runtime_config_yaml.py  test_hermes_runtime_docker_backend.py  test_hermes_runtime_manager.py  test_hermes_runtime_reaper.py  test_hermes_stale_provisioning_td031.py  test_migrations_env.py  test_openai_client.py  test_openai_upstream_error_logging.py  test_presets.py  test_redaction_crypto.py  test_redaction_idempotency_key.py  test_service_domain_adr031.py  test_sprint1_units.py  test_strip_context_block_adr042.py  test_time_now_registry.py  test_time_now_tool.py  test_tool_catalog.py
(+102 files in other folders)
