[project]
name = "claude-ios-backend"
version = "0.1.0"
description = "Backend for iOS Claude orchestration app (modular monolith)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23,<24",
    "pydantic>=2.9,<2.10",
    "pydantic-settings>=2.5,<2.6",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<1.14",
    "redis>=5,<6",
    "anthropic>=0.39,<0.40",
    # ADR-033: OpenAI SDK for the OpenAI provider (AsyncOpenAI, Chat Completions). Used only when
    # LLM_PROVIDER=openai; the default anthropic path does not import it at runtime.
    "openai>=1.51,<2",
    "httpx>=0.27,<0.28",
    # ADR-046: Docker SDK (docker-py) for per-user Hermes runtime management (run/start/stop/
    # remove/inspect) in src/app/hermes_runtime/docker_backend.py (RuntimeBackend impl). Requires
    # control-plane access to the Docker socket (07-deployment.md, 05-security.md).
    "docker>=7,<8",
    "pyjwt[crypto]>=2.9,<2.10",
    "cryptography>=43,<44",
    "prometheus-client>=0.21,<0.22",
    "pypdf>=5,<6",
    # TD-019 (ADR-026 §10): tz database for zoneinfo on the slim runtime image
    # (python:3.12-slim-bookworm has no /usr/share/zoneinfo). Pure-Python fallback
    # used automatically by stdlib `zoneinfo` so `time.now` tz arg resolves in prod.
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.11,<1.12",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "testcontainers>=4,<5",
    "respx>=0.21,<0.22",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.policy.*", "app.wallet.*", "app.byok.*", "app.chat.*"]
strict = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "respx.*"]
ignore_missing_imports = true

# docker-py (ADR-046) ships no py.typed; treat its public API as untyped at the import boundary.
[[tool.mypy.overrides]]
module = ["docker.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "external: tests that hit real external services (e.g. real Anthropic). Excluded from CI; run on demand.",
]

[tool.coverage.run]
source = ["src"]
# COVERAGE MEASUREMENT CORE: sys.monitoring (PEP 669, Python 3.12+), not the legacy C tracer.
# ----------------------------------------------------------------------------------------------
# WINDOWS SEGFAULT ROOT CAUSE (devops, infra fix): the full `--cov` run crashed on Windows with
# a "Windows fatal exception: access violation" (~23% in), faulthandler upcalls landing in
# hmac.py digest / cryptography. The SAME suite WITHOUT coverage (`--no-cov`) ran clean — so the
# crash is the coverage MEASUREMENT BACKEND, not the tests.
#   The legacy backend installs `sys.settrace` PER THREAD. With `concurrency=["thread"]` it also
#   hooked the `asyncio.to_thread` ThreadPoolExecutor WORKER THREADS. Those worker threads run
#   heavy NATIVE C code (cryptography/hmac digest, asyncpg, pydantic-core). A C-level trace
#   callback firing across native (re-entrant) C frames on the Windows runtime is the access
#   violation. This is a known class of native crash with settrace-based coverage on Windows.
#
# FIX: use the sys.monitoring core (`COVERAGE_CORE=sysmon`, exposed in config as `core`). It is
# an interpreter-level monitoring API (PEP 669), NOT a per-thread C settrace hook, so it does not
# wrap native C frames the way settrace does — the access violation disappears. It is also faster.
# Requires coverage >= 7.4 (we have 7.14.0 in uv.lock) and Python >= 3.12 (target runtime).
#
# `concurrency` is INTENTIONALLY REMOVED: with sysmon, monitoring is process/interpreter-wide and
# is NOT installed per-thread via settrace, so coverage of `asyncio.to_thread` worker-thread code
# and event-loop coroutines is captured WITHOUT the `["thread"]` concurrency model — and keeping
# it provided no benefit while it was exactly the per-thread-tracer path that crashed natively on
# Windows. (Still NOT "greenlet": SQLAlchemy's greenlet bridge is not a coverage scheduling model;
# still NOT "multiprocessing": no pytest-xdist / multiprocessing test parallelism.)
#
# `core` here is the authoritative channel (applies to EVERY invocation incl. a developer's manual
# narrow `uv run pytest --cov ...`); Makefile/CI ALSO export COVERAGE_CORE=sysmon as belt-and-
# suspenders for older coverage that does not read the `core` config key.
core = "sysmon"
